--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>끄투파이</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-    
+    {% block main %}
+    {% endblock %}
 </body>
 </html>
